2005-08-14  Yves Combe  <yves@ycombe.net>

	gcompris_radio_buttons configuration utility function for boards. Get a GHashTable with (key, label) pair, return the key pf the value selected.
	python binding is missing.

	* src/boards/colors.c: (colors_config_start):
	* src/gcompris/board_config.c: (gcompris_configuration_window),
	(gcompris_boolean_box_toggled), (gcompris_combo_box),
	(radio_changed), (create_radio_buttons), (destroy_hash),
	(gcompris_radio_buttons):
	* src/gcompris/board_config.h:

2005-08-12  Yves Combe  <yves@ycombe.net>

	improve boards selection: now menu selection follow childs.

	* po/Makefile.in.in:
	* src/boards/python/admin/board_list.py:

2005-08-04  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved by Yves. Now there is a by level filtering. 
	Very impressive how he made this user friendly. Much
	better than what I did in the configuration panel.

	* src/boards/python/admin/board_list.py:

2005-08-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixes several issue in src/boards/python.c. No more craches.
	- Prepared the login screen but empty for now
	- Renamed reread_xml by reread_menu
	- Now the noxrandr param is 'almost' persistant in the config file
	  'almost' because until you enter and quit the gcompris config
	  panel, it is not saved. This is very dangerous becaus after that
	  there is no way to put back xrander in since there is no --withxrandr
	  switch. 
	  WARNING: This need more works !!
	
	* boards/login.xml.in:
	* src/boards/python/login.py: Empty and unused for now
	* boards/Makefile.am:
	* boards/music/background/BachJSBrandenburgConcertNo2inFMajorBWV104
	7mvmt1.ogg:
	* boards/music/background/Bach_JS__Brandenburg_Concert_No_2_in_F_Ma
	jor_BWV_1047_mvmt1.ogg:
	* configure.in:
	* po/Makefile.in.in:
	* po/POTFILES.in:
	* src/boards/py-gcompris-properties.c:
	(pyGcomprisPropertiesType_getattr):
	* src/boards/py-mod-admin.c: (py_board_run_next):
	* src/boards/py-mod-gcompris.c:
	(py_gcompris_get_board_from_section):